--- a/src/EStore.Repositories/EStore.Repositories.csproj
+++ b/src/EStore.Repositories/EStore.Repositories.csproj
@@ -8,6 +8,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\EStore.DataAccess\EStore.DataAccess.csproj" />
+		<ProjectReference Include="..\EStore.Share\EStore.Share.csproj" />
 	</ItemGroup>
 
 </Project>
