--- a/src/EStore.Client/EStore.Client.csproj
+++ b/src/EStore.Client/EStore.Client.csproj
@@ -7,8 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\EStore.BusinessObject\EStore.BusinessObject.csproj" />
-		<ProjectReference Include="..\EStore.DataAccess\EStore.DataAccess.csproj" />
+	  <ProjectReference Include="..\EStore.Share\EStore.Share.csproj" />
 	</ItemGroup>
 
 </Project>
